load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("//tools/grpc:grpc.bzl", "grpc_library")

package(default_visibility = ["//visibility:public"])

grpc_library(
    name = "detail",
    srcs = glob(["*.proto"]),
)

proto_library(
    name = "detail_proto",
    srcs = ["detail.proto"],
)

go_proto_library(
    name = "detail_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/alandiegosantos/monorepo/proto/detail",
    proto = ":detail_proto",
)
