load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@com_github_grpc_grpc//bazel:grpc_build_system.bzl", "grpc_proto_library")
load("@com_github_grpc_grpc//bazel:python_rules.bzl", "py_grpc_library", "py_proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "proto",
    srcs = ["product.proto"],
    deps = [
        "//proto/detail:proto",
        "//proto/review:proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)

cc_proto_library(
    name = "cc_proto",
    deps = [":proto"],
)

cc_grpc_library(
    name = "cpp",
    srcs = [":proto"],
    grpc_only = True,
    deps = [":cc_proto"],
)

go_proto_library(
    name = "go",
    compilers = [
        "@io_bazel_rules_go//proto:go_proto",
        "@grpc_ecosystem_grpc_gateway//protoc-gen-grpc-gateway:go_gen_grpc_gateway",
        "//third-party/go:protoc-gen-go-grpc",
    ],
    importpath = "github.com/alandiegosantos/monorepo/proto/product",
    protos = [":proto"],
    deps = [
        "//proto/detail:go",
        "//proto/review:go",
        "@go_googleapis//google/api:annotations_go_proto",
    ],
)

py_proto_library(
    name = "py_proto",
    deps = [":proto"],
)

py_grpc_library(
    name = "python",
    srcs = [":proto"],
    deps = [":py_proto"],
)
