load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("//tools/grpc:grpc.bzl", "grpc_library")

package(default_visibility = ["//visibility:public"])

grpc_library(
    name = "product",
    srcs = glob(["*.proto"]),
    deps = [
        "//proto/detail",
        "//proto/review",
    ],
)

proto_library(
    name = "product_proto",
    srcs = ["product.proto"],
    deps = [
        "//google/api:api_proto",
        "//proto/detail:detail_proto",
        "//proto/review:review_proto",
    ],
)

go_proto_library(
    name = "product_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/alandiegosantos/monorepo/proto/product",
    proto = ":product_proto",
    deps = [
        "//google/api:annotations_proto",
        "//proto/detail:detail_go_proto",
        "//proto/review:review_go_proto",
    ],
)
