load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("//tools/grpc:grpc.bzl", "grpc_library")

package(default_visibility = ["//visibility:public"])

grpc_library(
    name = "product",
    srcs = glob(["*.proto"]),
    deps = [
        "//proto/detail:detail",
        "//proto/review:review",
    ],
)