load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@com_github_grpc_grpc//bazel:grpc_build_system.bzl", "grpc_proto_library")
load("@com_github_grpc_grpc//bazel:python_rules.bzl", "py_grpc_library", "py_proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "proto",
    srcs = ["review.proto"],
    deps = [
        "//proto/rating:proto",
    ],
)

cc_proto_library(
    name = "cc_proto",
    deps = [":proto"],
)

cc_grpc_library(
    name = "cpp",
    srcs = [":proto"],
    grpc_only = True,
    deps = [":cc_proto"],
)

go_proto_library(
    name = "go",
    compilers = [
        "@io_bazel_rules_go//proto:go_proto",
        "//third-party/go:protoc-gen-go-grpc",
    ],
    importpath = "github.com/alandiegosantos/monorepo/proto/review",
    protos = [":proto"],
    deps = [
        "//proto/rating:go",
    ],
)

py_proto_library(
    name = "py_proto",
    deps = [":proto"],
)

py_grpc_library(
    name = "python",
    srcs = [":proto"],
    deps = [":py_proto"],
)

java_proto_library(
    name = "java_proto",
    deps = [":proto"],
)

java_grpc_library(
    name = "java",
    srcs = [":proto"],
    deps = [":java_proto"],
)
