load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("//tools/grpc:grpc.bzl", "grpc_library")

package(default_visibility = ["//visibility:public"])

grpc_library(
    name = "review",
    srcs = glob(["*.proto"]),
    deps = ["//proto/rating"],
)

proto_library(
    name = "review_proto",
    srcs = ["review.proto"],
    deps = ["//proto/rating:rating_proto"],
)

go_proto_library(
    name = "review_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "proto/review",
    proto = ":review_proto",
    deps = ["//proto/rating:rating_go_proto"],
)
