load("@io_bazel_rules_docker//container:container.bzl", "container_push")
load("@monorepo_k8s_config//:config.bzl","CLUSTER","USER","REGISTRY")

package(default_visibility = ["//visibility:public"])

alias(
    name="server",
    actual = "//services/detail/src:server",
)

alias(
    name="image",
    actual = "//services/detail/src:image",
)
