# load("@com_adobe_rules_gitops//gitops:defs.bzl", "k8s_deploy")

package(default_visibility = ["//visibility:public"])

alias(
    name = "server",
    actual = "//services/detail/src:server",
)

alias(
    name = "image",
    actual = "//services/detail/src:image",
)

# alias(
#     name="image.push",
#     actual = "//services/detail/k8s:services_detail_image_" + REGISTRY.replace(":","_") + "_image.push",
# )

# k8s_deploy(
#     name = "register_argocd",
#     cluster = CLUSTER,
#     manifests = ["argocd.yaml"],
#     common_labels = {
#         "app": "detail",
#     },
#     namespace = "argocd",
#     user = USER,
# )
