load("@com_adobe_rules_gitops//gitops:defs.bzl", "k8s_deploy")
load("@monorepo_k8s_config//:config.bzl","CLUSTER","USER")

package(default_visibility = ["//visibility:public"])

k8s_deploy(
    name = "base",
    cluster = CLUSTER,
    manifests = glob(["base/*.yaml"]),
    namespace = "services",
    user = USER,
)
