load("@rules_python//python:defs.bzl", "py_binary")
load("//third-party/docker:image.bzl", "PYTHON_DEFAULT_BASE")
load("@com_adobe_rules_gitops//gitops:defs.bzl", "k8s_deploy")
load("@monorepo_k8s_config//:config.bzl", "CLUSTER", "REGISTRY", "USER")

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "server",
    srcs = glob(["src/**/*.py"]),
    python_version = "PY3",
    deps = [
        "//proto/rating:python",
        "@pypi_grpcio//:pkg",
    ],
)

alias(
    name = "image.push",
    actual = "//services/rating/k8s:services_rating_image_" + REGISTRY.replace(":", "_") + "_image.push",
)
