load("@com_adobe_rules_gitops//gitops:defs.bzl", "k8s_deploy")
load("@monorepo_k8s_config//:config.bzl","CLUSTER","USER")

package(default_visibility = ["//visibility:public"])

k8s_deploy(
    name = "deploy",
    cluster = CLUSTER,
    manifests = [
        "namespace.yaml",
        "@argocd_install//file",
    ],
    namespace = "argocd",
    user = USER,
)
