load("@com_adobe_rules_gitops//gitops:defs.bzl", "k8s_deploy")
load("@monorepo_k8s_config//:config.bzl","CLUSTER","USER","REGISTRY")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@io_bazel_rules_docker//contrib:group.bzl", "group_entry", "group_file")
load("@io_bazel_rules_docker//contrib:passwd.bzl", "passwd_entry", "passwd_tar")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
load("//tools/certs:cacerts.bzl", "copy_local_ca_certs")

package(default_visibility = ["//visibility:public"])

NONROOT = 65532
NOBODY = 65534
ARGOCD = 999

k8s_deploy(
    name = "deploy",
    cluster = CLUSTER,
    image_registry = REGISTRY,
    images = {
        "bazel-plugin": "//tools/argocd:bazel_plugin_image",
    },
    manifests = [
        "namespace.yaml",
        "@argocd_install//file",
    ],
    patches = [
        "plugin_container.yaml",
    ],
    namespace = "argocd",
    user = USER,
    configmaps_renaming = 'hash',
)

# Create a passwd file with a root and nonroot user and uid.
passwd_entry(
    name = "root_user",
    gid = 0,
    home = "/root",
    info = "root",
    shell = "/sbin/nologin",
    uid = 0,
    username = "root",
)

passwd_entry(
    name = "nobody_user",
    create_home = False,
    gid = NOBODY,
    home = "/nonexistent",
    info = "nobody",
    shell = "/sbin/nologin",
    uid = NOBODY,
    username = "nobody",
)

passwd_entry(
    name = "nonroot_user",
    gid = NONROOT,
    home = "/home/nonroot",
    info = "nonroot",
    shell = "/sbin/nologin",
    uid = NONROOT,
    username = "nonroot",
)

passwd_entry(
    name = "argocd_user",
    username = "argocd",
    info = "argocd",
    shell = "/sbin/nologin",
    gid = ARGOCD,
    uid = ARGOCD,
    home = "/tmp",
)

passwd_tar(
    name = "passwd",
    entries = [
        ":root_user",
        ":nonroot_user",
        ":nobody_user",
        ":argocd_user",
    ],
    passwd_file_pkg_dir = "etc",
)

group_entry(
    name = "root_group",
    gid = 0,
    groupname = "root",
)

group_entry(
    name = "nobody_group",
    gid = NOBODY,
    groupname = "nobody",
)

group_entry(
    name = "nonroot_group",
    gid = NONROOT,
    groupname = "nonroot",
)

group_entry(
    name = "tty_group",
    gid = 5,
    groupname = "tty",
)

group_entry(
    name = "argocd_group",
    gid = ARGOCD,
    groupname = "argocd",
)

group_file(
    name = "group",
    entries = [
        ":root_group",
        ":nobody_group",
        ":tty_group",
        ":argocd_group",
        ":nonroot_group",
    ],
)

pkg_tar(
    name = "group_tar",
    srcs = [":group"],
    mode = "0644",
    package_dir = "etc",
)

copy_local_ca_certs(
    name = "cacerts",
)

# Create a tar file containing the created passwd file
pkg_tar(
    name = "bazelisk_tar",
    srcs = ["@bazelisk//file"],
    mode = "0o755",
    package_dir = "/usr/local/bin",
)

pkg_tar(
    name = "plugin_config_tar",
    srcs = ["plugin.yaml"],
    mode = "0o644",
    package_dir = "/home/argocd/cmp-server/config",
)

pkg_tar(
    name = "python-link",
    symlinks = { "/usr/bin/python": "/usr/bin/python3" },
)

container_image(
    name = "bazel_plugin_image",
    base = "@arm64v8_debian//image",
    entrypoint = None,
    tars = [
        ":passwd",
        ":group_tar",
        ":bazelisk_tar",
        ":plugin_config_tar",
        ":python-link",
        ":cacerts",
    ],
    env = {
        "SSL_CERT_FILE": "/etc/ssl/certs/ca-certificates.crt",
    },
    debs = [
        "@arm64_debian11_binutils//file",
        "@arm64_debian11_binutils-aarch64-linux-gnu//file",
        "@arm64_debian11_binutils-common//file",
        "@arm64_debian11_build-essential//file",
        "@arm64_debian11_bzip2//file",
        "@arm64_debian11_cpp-10//file",
        "@arm64_debian11_cpp//file",
        "@arm64_debian11_dash//file",
        "@arm64_debian11_dirmngr//file",
        "@arm64_debian11_dpkg-dev//file",
        "@arm64_debian11_fakeroot//file",
        "@arm64_debian11_fontconfig-config//file",
        "@arm64_debian11_fonts-dejavu-core//file",
        "@arm64_debian11_gpp-10//file",
        "@arm64_debian11_gpp//file",
        "@arm64_debian11_gcc-10//file",
        "@arm64_debian11_gcc//file",
        "@arm64_debian11_git-man//file",
        "@arm64_debian11_git//file",
        "@arm64_debian11_gnupg-l10n//file",
        "@arm64_debian11_gnupg-utils//file",
        "@arm64_debian11_gnupg//file",
        "@arm64_debian11_gpg-agent//file",
        "@arm64_debian11_gpg-wks-client//file",
        "@arm64_debian11_gpg-wks-server//file",
        "@arm64_debian11_gpg//file",
        "@arm64_debian11_gpgconf//file",
        "@arm64_debian11_gpgsm//file",
        "@arm64_debian11_javascript-common//file",
        "@arm64_debian11_less//file",
        "@arm64_debian11_libalgorithm-diff-perl//file",
        "@arm64_debian11_libalgorithm-diff-xs-perl//file",
        "@arm64_debian11_libalgorithm-merge-perl//file",
        "@arm64_debian11_libasan6//file",
        "@arm64_debian11_libassuan0//file",
        "@arm64_debian11_libatomic1//file",
        "@arm64_debian11_libbinutils//file",
        "@arm64_debian11_libbrotli1//file",
        "@arm64_debian11_libbsd0//file",
        "@arm64_debian11_libc-dev-bin//file",
        "@arm64_debian11_libc-devtools//file",
        "@arm64_debian11_libc6-dev//file",
        "@arm64_debian11_libcbor0//file",
        "@arm64_debian11_libcc1-0//file",
        "@arm64_debian11_libcrypt-dev//file",
        "@arm64_debian11_libctf-nobfd0//file",
        "@arm64_debian11_libctf0//file",
        "@arm64_debian11_libcurl3-gnutls//file",
        "@arm64_debian11_libdeflate0//file",
        "@arm64_debian11_libdpkg-perl//file",
        "@arm64_debian11_libedit2//file",
        "@arm64_debian11_liberror-perl//file",
        "@arm64_debian11_libexpat1-dev//file",
        "@arm64_debian11_libexpat1//file",
        "@arm64_debian11_libfakeroot//file",
        "@arm64_debian11_libfido2-1//file",
        "@arm64_debian11_libfile-fcntllock-perl//file",
        "@arm64_debian11_libfontconfig1//file",
        "@arm64_debian11_libfreetype6//file",
        "@arm64_debian11_libgcc-10-dev//file",
        "@arm64_debian11_libgd3//file",
        "@arm64_debian11_libgdbm-compat4//file",
        "@arm64_debian11_libgdbm6//file",
        "@arm64_debian11_libgomp1//file",
        "@arm64_debian11_libgpm2//file",
        "@arm64_debian11_libidn2-0//file",
        "@arm64_debian11_libisl23//file",
        "@arm64_debian11_libitm1//file",
        "@arm64_debian11_libjbig0//file",
        "@arm64_debian11_libjpeg62-turbo//file",
        "@arm64_debian11_libjs-jquery//file",
        "@arm64_debian11_libjs-sphinxdoc//file",
        "@arm64_debian11_libjs-underscore//file",
        "@arm64_debian11_libksba8//file",
        "@arm64_debian11_libldap-2.4-2//file",
        "@arm64_debian11_libldap-common//file",
        "@arm64_debian11_liblocale-gettext-perl//file",
        "@arm64_debian11_liblsan0//file",
        "@arm64_debian11_libmd0//file",
        "@arm64_debian11_libmpc3//file",
        "@arm64_debian11_libmpdec3//file",
        "@arm64_debian11_libmpfr6//file",
        "@arm64_debian11_libncursesw6//file",
        "@arm64_debian11_libnettle8//file",
        "@arm64_debian11_libnghttp2-14//file",
        "@arm64_debian11_libnpth0//file",
        "@arm64_debian11_libnsl-dev//file",
        "@arm64_debian11_libpcre2-8-0//file",
        "@arm64_debian11_libperl5.32//file",
        "@arm64_debian11_libpng16-16//file",
        "@arm64_debian11_libpsl5//file",
        "@arm64_debian11_libpython3-dev//file",
        "@arm64_debian11_libpython3-stdlib//file",
        "@arm64_debian11_libpython3.9-dev//file",
        "@arm64_debian11_libpython3.9-minimal//file",
        "@arm64_debian11_libpython3.9-stdlib//file",
        "@arm64_debian11_libpython3.9//file",
        "@arm64_debian11_libreadline8//file",
        "@arm64_debian11_librtmp1//file",
        "@arm64_debian11_libsasl2-2//file",
        "@arm64_debian11_libsasl2-modules-db//file",
        "@arm64_debian11_libsasl2-modules//file",
        "@arm64_debian11_libsqlite3-0//file",
        "@arm64_debian11_libssh2-1//file",
        "@arm64_debian11_libstdcpp-10-dev//file",
        "@arm64_debian11_libtiff5//file",
        "@arm64_debian11_libtirpc-dev//file",
        "@arm64_debian11_libtsan0//file",
        "@arm64_debian11_libubsan1//file",
        "@arm64_debian11_libwebp6//file",
        "@arm64_debian11_libx11-6//file",
        "@arm64_debian11_libx11-data//file",
        "@arm64_debian11_libxau6//file",
        "@arm64_debian11_libxcb1//file",
        "@arm64_debian11_libxdmcp6//file",
        "@arm64_debian11_libxext6//file",
        "@arm64_debian11_libxmuu1//file",
        "@arm64_debian11_libxpm4//file",
        "@arm64_debian11_linux-libc-dev//file",
        "@arm64_debian11_make//file",
        "@arm64_debian11_manpages-dev//file",
        "@arm64_debian11_manpages//file",
        "@arm64_debian11_media-types//file",
        "@arm64_debian11_netbase//file",
        "@arm64_debian11_openssh-client//file",
        "@arm64_debian11_openssl//file",
        "@arm64_debian11_patch//file",
        "@arm64_debian11_perl-modules-5.32//file",
        "@arm64_debian11_perl//file",
        "@arm64_debian11_pinentry-curses//file",
        "@arm64_debian11_publicsuffix//file",
        "@arm64_debian11_python3-dev//file",
        "@arm64_debian11_python3-distutils//file",
        "@arm64_debian11_python3-lib2to3//file",
        "@arm64_debian11_python3-minimal//file",
        "@arm64_debian11_python3.9-dev//file",
        "@arm64_debian11_python3.9-minimal//file",
        "@arm64_debian11_python3.9//file",
        "@arm64_debian11_python3//file",
        "@arm64_debian11_readline-common//file",
        "@arm64_debian11_sensible-utils//file",
        "@arm64_debian11_ucf//file",
        "@arm64_debian11_xauth//file",
        "@arm64_debian11_xz-utils//file",
        "@arm64_debian11_zlib1g-dev//file",
        "@arm64_debian11_gnutls-bin//file",
        "@arm64_debian11_libgmp10//file",
        "@arm64_debian11_libgnutls30//file",
        "@arm64_debian11_libhogweed6//file",
    ]
)
