load("@com_adobe_rules_gitops//gitops:defs.bzl", "k8s_deploy")
load("@monorepo_k8s_config//:config.bzl", "CLUSTER", "REGISTRY", "USER")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
load("//tools/certs:cacerts.bzl", "copy_local_ca_certs")

package(default_visibility = ["//visibility:public"])

NONROOT = 65532

NOBODY = 65534

ARGOCD = 999

# k8s_deploy(
#     name = "deploy",
#     cluster = CLUSTER,
#     image_registry = REGISTRY,
#     images = {
#         "bazel-plugin": "//tools/argocd:bazel_plugin_image",
#     },
#     manifests = [
#         "namespace.yaml",
#         "@argocd_install//file",
#     ],
#     patches = [
#         "plugin_container.yaml",
#     ],
#     namespace = "argocd",
#     user = USER,
#     configmaps_renaming = 'hash',
# )
