load("@rules_python//python:defs.bzl", "py_binary")

sh_binary(
    name = "dpkg_extract",
    srcs = ["dpkg_extract.sh"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "build_tar",
    srcs = [
        "__init__.py",
        "archive.py",
        "build_tar.py",
        "helpers.py",
    ],
    python_version = "PY3",
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
)
