load("//tools/certs:generate.bzl", "generate_certificate")
load("@com_adobe_rules_gitops//gitops:defs.bzl", "external_image", "k8s_deploy")
load("@monorepo_k8s_config//:config.bzl", "CLUSTER", "REGISTRY", "USER")

generate_certificate(
    name = "registry_cert",
    cn = "/CN=registry.infra",
    dns = "registry.infra",
)

# using image from external repo
external_image(
    name = "image",
    digest = "sha256:20d084723c951e377e1a2a5b3df316173a845e300d57ccdd8ae3ab2da3439746",
    image = "docker.io/library/registry:2",
)

k8s_deploy(
    name = "deploy",
    cluster = CLUSTER,
    configmaps_renaming = "hash",
    image_registry = REGISTRY,
    images = [
        ":image",
    ],
    manifests = glob(["manifests/*.yaml"]),
    namespace = "infra",
    secrets_srcs = [
        ":registry_cert",
    ],
    user = USER,
)
