load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "goinit",
    srcs = glob(["*.go"]),
    importpath = "",
    deps = [
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_grpc//balancer:go_default_library",
        "@org_golang_google_grpc//balancer/roundrobin:go_default_library",
        "@org_golang_google_grpc//resolver:go_default_library",
        "@org_golang_google_grpc//xds:go_default_library",
    ],
)
