load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("//third-party/docker:image.bzl", "REGISTRY")
load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

package(default_visibility = ["//visibility:public"])

k8s_object(
    name = "deploy",
    resolver = "//tools/k8s/go/cmd/resolver:resolver",
    images = {
       "infra/xdsserver:latest": "//infra/xdsserver/cmd/server:image",
    },
    namespace = "infra",
    image_chroot = REGISTRY,
    # K8s deployment template with a stamping variable to replace
    template = ":deployment.yaml",
    cluster = "kubernetes",
)
