load("//tools/k8s:k8s.bzl", "multi_k8s_deploy")

package(default_visibility = ["//visibility:public"])

multi_k8s_deploy(
    name = "release",
    common_labels = {
        "app": "detail",
    },
    images = {
        "image": "//services/detail:image",
    },
    manifests = glob(["*.yaml"]),
    namespace = "services",
)
