load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//third-party/docker:image.bzl", "CC_DEFAULT_BASE")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

cc_binary(
    name = "server",
    srcs = ["server.cc"],
    linkopts = ["-static"],
    linkstatic = True,
    deps = [
        "//proto/detail:detail_cpp",
        "@com_github_gflags_gflags//:gflags",
        "@com_github_grpc_grpc//:grpc++",
        "@com_github_grpc_grpc//:grpc++_reflection",
    ],
)

pkg_tar(
    name = "tar",
    srcs = [":server"],
)

oci_image(
    name = "image",
    base = CC_DEFAULT_BASE,
    entrypoint = ["/server"],
    tars = [":tar"],
)
