load("@monorepo_k8s_config//:config.bzl","CLUSTER","USER","REGISTRY")
load("@com_adobe_rules_gitops//gitops:defs.bzl", "k8s_deploy")

package(default_visibility = ["//visibility:public"])

k8s_deploy(
    name = "release",
    cluster = CLUSTER,
    image_registry = REGISTRY,  # override the default registry host for developent
    images = {
        "image": "//services/product:image",
    },
    manifests = glob(["*.yaml"]),
    common_labels = {
        "app": "product",
    },
    namespace = "services",
    user = USER,
)
