load("@monorepo_k8s_config//:config.bzl", "CLUSTER", "REGISTRY", "USER")
load("@com_adobe_rules_gitops//gitops:defs.bzl", "k8s_deploy")

package(default_visibility = ["//visibility:public"])

k8s_deploy(
    name = "release",
    cluster = CLUSTER,
    common_labels = {
        "app": "rating",
    },
    image_registry = REGISTRY,  # override the default registry host for developent
    images = {
        "image": "//services/rating:image",
    },
    manifests = glob(["*.yaml"]),
    namespace = "services",
    user = USER,
)
