load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("//third-party/docker:image.bzl", "GO_DEFAULT_BASE", "REGISTRY")

package(default_visibility = ["//visibility:public"])

go_binary(
    name = "entrypoint",
    embed = [":lib"],
    pure = "on",
)

go_library(
    name = "lib",
    srcs = glob(["*.go"]),
    importpath = "github.com/alandiegosantos/monorepo/infra/entrypoint/cmd/entrypoint",
    deps = [
        "//common/go/goinit",
        "//common/go/net:go_default_library",
        "//proto/infra:go",
        "@com_github_envoyproxy_go_control_plane//envoy/config/core/v3:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_protobuf//encoding/protojson:go_default_library",
        "@org_golang_google_protobuf//types/known/structpb:go_default_library",
    ],
)

go_image(
    name = "image",
    base = GO_DEFAULT_BASE,
    embed = [":lib"],
    pure = "on",
)
