load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("//third-party/docker:image.bzl", "GO_DEFAULT_BASE")

package(default_visibility = ["//visibility:public"])

go_binary(
    name = "server",
    embed = [":lib"],
    pure = "on",
)

go_library(
    name = "lib",
    srcs = ["main.go"],
    importpath = "github.com/alandiegosantos/monorepo/services/products/cmd/server",
    deps = [
        "//common/go/goinit",
        "//proto/product:go",
        "//services/product/pkg/handler",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@grpc_ecosystem_grpc_gateway//runtime:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure:go_default_library",
        "@org_golang_google_grpc//xds:go_default_library",
        "@org_golang_google_grpc//grpclog/glogger:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)

go_image(
    name = "image",
    base = GO_DEFAULT_BASE,
    embed = [":lib"],
    pure = "on",
)
